// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExtendsExample.jsx 1`] = `
<DocumentFragment>
  <button
    class="t-button t-button--primary"
  >
    浮层在右边
  </button>
</DocumentFragment>
`;

exports[`PlacementExample.jsx 1`] = `
<DocumentFragment>
  <button
    class="t-button t-button--primary"
  >
    Left
  </button>
  <button
    class="t-button t-button--line"
  >
    Top
  </button>
  <button
    class="t-button t-button--line"
  >
    Bottom
  </button>
</DocumentFragment>
`;

exports[`PopConfirm 组件测试 PopContent - icon & theme snapshots 1`] = `
<DocumentFragment>
  <div
    class="t-popconfirm__content"
  >
    <div
      class="t-popconfirm__body"
    >
      <svg
        class="t-icon t-icon-info-circle-filled"
        style="color: rgb(255, 62, 0);"
      >
        <use
          xlink:href="#t-icon-info-circle-filled"
        />
      </svg>
      <div
        class="t-popconfirm__inner"
      >
        弹出层描述
      </div>
    </div>
    <div
      class="t-popconfirm__buttons"
    >
      <button
        class="t-button t-size-s"
        style="color: rgb(34, 34, 34);"
      />
      <button
        class="t-button t-size-s"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`PopConfirm 组件测试 PopContent - icon & theme snapshots 2`] = `
<DocumentFragment>
  <div
    class="t-popconfirm__content"
  >
    <div
      class="t-popconfirm__body"
    >
      <svg
        class="t-icon t-icon-info-circle-filled"
        style="color: rgb(255, 170, 0);"
      >
        <use
          xlink:href="#t-icon-info-circle-filled"
        />
      </svg>
      <div
        class="t-popconfirm__inner"
      >
        弹出层描述
      </div>
    </div>
    <div
      class="t-popconfirm__buttons"
    >
      <button
        class="t-button t-size-s"
        style="color: rgb(34, 34, 34);"
      />
      <button
        class="t-button t-size-s"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`PopConfirm 组件测试 PopContent - icon & theme snapshots 3`] = `
<DocumentFragment>
  <div
    class="t-popconfirm__content"
  >
    <div
      class="t-popconfirm__body"
    >
      <svg
        class="t-icon t-icon-info-circle-filled"
        style="color: rgb(0, 82, 217);"
      >
        <use
          xlink:href="#t-icon-info-circle-filled"
        />
      </svg>
      <div
        class="t-popconfirm__inner"
      >
        弹出层描述
      </div>
    </div>
    <div
      class="t-popconfirm__buttons"
    >
      <button
        class="t-button t-size-s"
        style="color: rgb(34, 34, 34);"
      />
      <button
        class="t-button t-size-s"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`PopConfirm 组件测试 PopContent - icon & theme snapshots 4`] = `
<DocumentFragment>
  <div
    class="t-popconfirm__content"
  >
    <div
      class="t-popconfirm__body"
    >
      <div
        class="t-popconfirm__inner"
      >
        弹出层描述
      </div>
    </div>
    <div
      class="t-popconfirm__buttons"
    >
      <button
        class="t-button t-size-s"
        style="color: rgb(34, 34, 34);"
      />
      <button
        class="t-button t-size-s"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`PopConfirm 组件测试 PopContent - icon & theme snapshots 5`] = `
<DocumentFragment>
  <div
    class="t-popconfirm__content"
  >
    <div
      class="t-popconfirm__body"
    >
      <svg
        class="t-icon t-icon-success-fill"
        style="color: rgb(255, 62, 0);"
      >
        <use
          xlink:href="#t-icon-success-fill"
        />
      </svg>
      <div
        class="t-popconfirm__inner"
      >
        弹出层描述
      </div>
    </div>
    <div
      class="t-popconfirm__buttons"
    >
      <button
        class="t-button t-size-s"
        style="color: rgb(34, 34, 34);"
      />
      <button
        class="t-button t-size-s"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`PopConfirm 组件测试 PopContent - icon & theme snapshots 6`] = `
<DocumentFragment>
  <div
    class="t-popconfirm__content"
  >
    <div
      class="t-popconfirm__body"
    >
      <i
        style="color: rgb(255, 62, 0);"
      >
        <span>
          CustomIcon
        </span>
      </i>
      <div
        class="t-popconfirm__inner"
      >
        弹出层描述
      </div>
    </div>
    <div
      class="t-popconfirm__buttons"
    >
      <button
        class="t-button t-size-s"
        style="color: rgb(34, 34, 34);"
      />
      <button
        class="t-button t-size-s"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`PopConfirm 组件测试 PopContent - icon & theme snapshots 7`] = `
<DocumentFragment>
  <div
    class="t-popconfirm__content"
  >
    <div
      class="t-popconfirm__body"
    >
      <svg
        class="t-icon t-icon-success-fill"
        style="color: rgb(0, 82, 217);"
      >
        <use
          xlink:href="#t-icon-success-fill"
        />
      </svg>
      <div
        class="t-popconfirm__inner"
      >
        弹出层描述
      </div>
    </div>
    <div
      class="t-popconfirm__buttons"
    >
      <button
        class="t-button t-size-s"
        style="color: rgb(34, 34, 34);"
      />
      <button
        class="t-button t-size-s"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`PopConfirm 组件测试 PopContent - icon & theme snapshots 8`] = `
<DocumentFragment>
  <div
    class="t-popconfirm__content"
  >
    <div
      class="t-popconfirm__body"
    >
      <svg
        class="t-icon t-icon-success-fill"
        style="color: rgb(0, 82, 217);"
      >
        <use
          xlink:href="#t-icon-success-fill"
        />
      </svg>
      <div
        class="t-popconfirm__inner"
      >
        弹出层描述
      </div>
    </div>
    <div
      class="t-popconfirm__buttons"
    >
      <button
        class="t-button t-size-s"
        style="color: rgb(34, 34, 34);"
      />
      <button
        class="t-button t-size-s"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`PopConfirm 组件测试 PopContent - icon & theme snapshots 9`] = `
<DocumentFragment>
  <div
    class="t-popconfirm__content"
  >
    <div
      class="t-popconfirm__body"
    >
      <span>
        CustomIcon
      </span>
      <div
        class="t-popconfirm__inner"
      >
        弹出层描述
      </div>
    </div>
    <div
      class="t-popconfirm__buttons"
    >
      <button
        class="t-button t-size-s"
        style="color: rgb(34, 34, 34);"
      />
      <button
        class="t-button t-size-s"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`ThemeExample.jsx 1`] = `
<DocumentFragment>
  <button
    class="t-button t-button--line"
  >
    默认
  </button>
  <button
    class="t-button t-button--primary"
  >
    提示
  </button>
  <button
    class="t-button t-button--warning"
  >
    警告
  </button>
  <button
    class="t-button t-button--line"
  >
    错误
  </button>
</DocumentFragment>
`;

exports[`base.jsx 1`] = `
<DocumentFragment>
  <button
    class="t-button t-button--primary"
  >
    提交
  </button>
</DocumentFragment>
`;

exports[`describe.jsx 1`] = `
<DocumentFragment>
  <button
    class="t-button t-button--primary"
  >
    操作
  </button>
</DocumentFragment>
`;

exports[`icon.jsx 1`] = `
<DocumentFragment>
  <button
    class="t-button t-button--primary"
  >
    使用String
  </button>
  <button
    class="t-button t-button--primary"
  >
    使用VNode
  </button>
  <button
    class="t-button t-button--primary"
  >
    使用Function
  </button>
</DocumentFragment>
`;
